# Guess_Anime

./: Hangman.py  pyproject.toml
guess_anime/: manage.py  requirements.txt  vercel.json
guess_anime/guess_anime/: asgi.py  settings.py  urls.py  wsgi.py
guess_anime/guessor/: apps.py  views.py
guess_anime/guessor/templates/: index.html
